applications/kubernetes/media/servarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: servarr
    spec:
      securityContext:
        fsGroup: 865
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:latest
          securityContext:
            runAsUser: 0
            capabilities:
              add: [ "NET_ADMIN" ]
          readinessProbe:
            exec:
              command:
                - /gluetun-entrypoint
                - healthcheck
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - /gluetun-entrypoint
                - healthcheck
            initialDelaySeconds: 30
            periodSeconds: 30
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "(ip rule del table 51820; ip -6 rule del table 51820) || true"]
          ports:
            - name: socks5
              containerPort: 1080

        - image: lscr.io/linuxserver/prowlarr:latest
          name: prowlarr
          securityContext:
            runAsUser: 865
            runAsGroup: 865
          ports:
            - containerPort: 9696
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: prowlarr-pv
            - mountPath: /media
              name: nfs

        - image: ghcr.io/flaresolverr/flaresolverr:latest
          name: flaresolverr
          ports:
            - containerPort: 8191
              protocol: TCP
        - image: lscr.io/linuxserver/radarr:latest
          name: radarr
          securityContext:
            runAsUser: 865
            runAsGroup: 865
          ports:
            - containerPort: 7878
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: radarr-pv
            - mountPath: /media
              name: nfs

        - image: lscr.io/linuxserver/sonarr:latest
          name: sonarr
          securityContext:
            runAsUser: 865
            runAsGroup: 865
          ports:
            - containerPort: 8989
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: sonarr-pv
            - mountPath: /media
              name: nfs

        - image: ghcr.io/cleanuparr/cleanuparr:latest
          name: cleanuparr
          ports:
            - containerPort: 11011
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: cleanuparr-pv

      restartPolicy: Always
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: media-nfs-pvc
        - name: prowlarr-pv
          persistentVolumeClaim:
            claimName: prowlarr-pvc
        - name: radarr-pv
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: sonarr-pv
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: cleanuparr-pv
          persistentVolumeClaim:
            claimName: cleanuparr-pvc
        - name: huntarr-pv
          persistentVolumeClaim:
            claimName: huntarr-pvc
